welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:28: error: class Array takes type parameters
def faireMotif(T:Array)
                 ^Array2:28: error: class Array takes type parameters
def faireMotif(T:Array)
                 ^Array2:43: error: not found: value isFaceMur
  } while (!isFaceMur)
            ^